# shopping-cart

./: .coveragerc  .gitignore  pyproject.toml
.github/workflows/: python-ci.yml
src/shopping_cart/: currency.py  customer.py  monetary_amount.py  money.py  price.py  pricing_model.py  product.py  product_offer.py  receipt.py  shopping_cart.py
tests/: test_edge_cases.py  test_shopping_cart.py
