[project]
name = "shopping-cart"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrea Laforgia",email = "andrea.laforgia@armakuni.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "shopping_cart", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
